test/official_tests/super/super_without_name.lox
class A {}

class B < A {
  method() {
    super.; // error: {"line":5,"message":"Expect superclass method name","type":"ParseError"}
  }
}
